		the same name, then only the first one controls the auto range.  :-(
	Further tweaked Console's update of inspectors when stopping them
	Modified SimpleController to update inspectors when stopping them just like Console
	Modified howto.html to show how to propery close and write out movies when finishing
		or quitting if your movie is from a display.
	Made network.directed non-final and private.  Created a new method called isDirected()
		to return direction.   Added network.reset(...) to reset direction. 
	Bug fix to NetworkPortrayal2D, which was drawing and inspecting edges twice if undirected.
		The error shouldn't occur in NetworkPortrayal3D which already does edge hashing
		and so shouldn't have duplicates.
	Edges are explicitly stated in documentation to hash by reference.
	Edges now print to strings differently based on whether they're owned, or directed,
		or undirected
	Added Edge.isDirected()
	Fixed bug in NetworkPortrayal2D() when using undirected edges -- not all edges would
		be displayed (was using edge.getTo() rather than edge.getOtherNode(...))
	Bug fixes to GUI description of updates in Display2D and Display3D
	Fixed deprecated warnings
	Deprecated Display2D's and Display3D's standard constructor -- you should use the new
		constructor now if you can.
	Modified all tutorials, documentation, and examples to use the new Display2D and Display3D
		constructors.
	Deprecated paintComponent(Graphics, buffer).  Eventually we'll delete this method and
		merge it in with paintComponent(Graphics).
	Deleted Display2D.getMaximumsize(), which (besides being misspelled) apparently isn't
		necessary.
	Moved createToolTipText from the InnerDisplay2D to the Display2D
	Deprecated InnerDisplay2D.removeListeners() and created an identical version in Display2D
	Fixed bug in preferences which wasn't setting the 'should repeat on stop' button.  Thanks
		to Kyle Feuz <kyle.feuz@aggiemail.usu.edu>
	Simplifications to Makefile